# MyCMake

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Basic.cmake  Build.cmake  CPM.cmake  Compiler.cmake  Download.cmake  Git.cmake  Init.cmake  Package.cmake  QT.cmake  Qt.cmake  Tools.cmake
config/: Config.cmake.in  config_dll.in
doc/: intro.md
ground/: CMakeLists.txt
ground/test00/: CMakeLists.txt
ground/test01/: CMakeLists.txt
include/: mul.h
include/Test_01_GroupSrcs/0/: h_0_0.h  h_0_1.h
include/test_02_lib/: hello.h  hello.hxx
include/test_03_dll/: servant.h  servant.hxx
src/EMPTY/: CMakeLists.txt  EMPTY.cpp  EMPTY.cxx
src/EMPTY/src/test/04_Qt/00_hello/: main.cxx  mainwindow.cxx  mainwindow.hxx
src/head_files/: CMakeLists.txt
src/test/: CMakeLists.txt
src/test/00_Baisc/: CMakeLists.txt
src/test/00_Basic/: CMakeLists.txt
src/test/01_CPM/: CMakeLists.txt
src/test/01_GroupSrcs/: CMakeLists.txt  main.cpp
src/test/02_cpp20/: CMakeLists.txt  main.cpp
src/test/02_lib/GenLib/: CMakeLists.txt  hello.cpp  hello.cxx
src/test/02_lib/UseLib/: CMakeLists.txt  main.cpp  main.cxx
src/test/03_dll/GenDll/: CMakeLists.txt  My_config_servant_dll.in  servant.cpp  servant.cxx
src/test/03_dll/UseDll/: CMakeLists.txt  main.cpp  main.cxx
src/test/03_lib/use/: CMakeLists.txt  main.cpp
src/test/04_Qt/00_hello/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/test/04_dll/: mul.h
src/test/04_dll/use_c/: CMakeLists.txt  main.c
src/test/04_dll/use_c_dynamicload/: CMakeLists.txt  main.c
src/test/04_dll/use_c_staticlload/: CMakeLists.txt  main.c
src/test/04_dll/use_c_staticload/: main.c
src/test/04_dll/use_dynamicload/: CMakeLists.txt  main.cpp
src/test/04_dll/use_staticload/: main.cpp
src/test/05_data/: main.cpp  main.cxx
src/test/05_dll_class/classic/: MyClass.h
src/test/05_dll_class/classic/use_c_dynamic/: CMakeLists.txt  main.c
src/test/05_dll_class/classic/use_c_static/: CMakeLists.txt  main.c
src/test/05_dll_class/classic/use_static/: CMakeLists.txt  main.cpp
src/test/05_dll_class/virtual/: MyClass.h
src/test/05_dll_class/virtual/use_c_dynamic/: CMakeLists.txt  main.c
src/test/05_dll_class/virtual/use_c_static/: main.c
src/test/05_dll_class/virtual/use_dynamic/: CMakeLists.txt  main.cpp
src/test/05_dll_class/virtual/use_static/: CMakeLists.txt  main.cpp
src/test/06_static_shared/: mul.h
src/test/06_static_shared/use_shared/: CMakeLists.txt  main.cpp
src/test/06_static_shared/use_static/: CMakeLists.txt
